test/ui/tests/metadata/duplicate-entries.stderr
error[E803]: the entry `first` is defined multiple times
 --> ${DIRECTORY}/metadata/duplicate-entries.metadata:3:1
  |
3 | first: 23, first: "",
  | ----- previous definition
  |
 --> ${DIRECTORY}/metadata/duplicate-entries.metadata:3:12
  |
3 | first: 23, first: "",
  |            ^^^^^ redefinition
  |

error[E803]: the entry `it` is defined multiple times
 --> ${DIRECTORY}/metadata/duplicate-entries.metadata:6:5
  |
6 |     it: [],
  |     -- previous definition
  |
 --> ${DIRECTORY}/metadata/duplicate-entries.metadata:7:5
  |
7 |     it: 0'000,
  |     ^^ redefinition
  |

error: aborting due to 2 previous errors
 note: the error E803 has a detailed explanation
 help: run `lushui explain E803` to view it

